Updates utilities to properly resolve classpath by using junit